Fix double spacing issue by removing bottom margin from menu li elements

--- a/public/styles.css
+++ b/public/styles.css
@@ -95,7 +95,7 @@ html, body {
     text-align: center;
 }
 .menu-items ul li {
-    margin: 20px 0;
+    margin: 20px 0 0 0;
 }
 .menu-items ul li a {
     color: #fff;
