--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,7 @@ body {
 }
 
 .menu-items ul li {
-    margin: 20px 0;
+    margin: 20px 0 0 0;
 }
 
 .menu-items ul li a {
